@@ -179,7 +179,7 @@ def cleanup_tempdir(app, exc):
         pass
 
 def get_tooltip(self, node):
-    if self.builder.config.pngmath_use_tooltips :
+    if self.builder.config.pngmath_add_tooltips:
         return ' alt="%s"' % self.encode(node['latex']).strip()
     return ''
 
@@ -198,12 +198,10 @@ def html_visit_math(self, node):
         self.body.append('<span class="math">%s</span>' %
                          self.encode(node['latex']).strip())
     else:
-        c  = '<img class="math" src="%s"' % fname
-        c += get_tooltip(self, node)
-        if depth:
-            c += ' style="vertical-align: %dpx"' % -depth
-        c += '/>'
-        self.body.append(c)
+        c  = ('<img class="math" src="%s"' % fname) + get_tooltip(self, node)
+        if depth is not None:
+            c += ' style="vertical-align: %dpx"' % (-depth)
+        self.body.append(c + '/>')
     raise nodes.SkipNode
 
 def html_visit_displaymath(self, node):
@@ -228,10 +226,8 @@ def html_visit_displaymath(self, node):
         self.body.append('<span class="math">%s</span></p>\n</div>' %
                          self.encode(node['latex']).strip())
     else:
-        c  = '<img src="%s"' % fname
-        c += get_tooltip(self, node)
-        c += '/></p>\n</div>'
-        self.body.append(c)
+        self.body.append(('<img src="%s"' % fname) + get_tooltip(self, node)
+                         + '/></p>\n</div>')
     raise nodes.SkipNode
 
 
@@ -244,5 +240,5 @@ def setup(app):
                          ['-gamma 1.5', '-D 110'], 'html')
     app.add_config_value('pngmath_latex_args', [], 'html')
     app.add_config_value('pngmath_latex_preamble', '', 'html')
-    app.add_config_value('pngmath_use_tooltips', True, 'html')
+    app.add_config_value('pngmath_add_tooltips', True, 'html')
     app.connect('build-finished', cleanup_tempdir)
